--- a/bomberman.cabal
+++ b/bomberman.cabal
@@ -23,3 +23,4 @@ executable bomberman
                      , random
                      , transformers
                      , vty
+                     , QuickCheck
